--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP32.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 32: Where is the money in our cities going?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 16 Sep 2023 <span class="sep">/</span> 00:00</small></span></div>
             <p class="mb-4">Srikanth Vishwanathan unpacks city finances. Why is infrastructure in our cities failing? Are cities mismanaging the finances? Are they unable to tap the right sources of funding? What is the impact of a dysfunctional city finance corporation? What are the reforms in municipal finances?</p>
@@ -407,17 +407,17 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP31.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 31: Why are our cities dirty?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 9 Sep 2023 <span class="sep">/</span> 1:00:00</small></span></div>
-            <p class="mb-4">Sandhya Narayanan of Solid Waste Management Round Table unpacks the biggest problem plauging our cities today: Trash, Litter, Waste. She lays blame squarely where it belong while walking us through the tremendous progress made over the past decade.</p>
+            <p class="mb-4">Sandhya Narayanan of Solid Waste Management Round Table unpacks the biggest problem plauging our cities today: Trash, Litter, Waste. She lays blame squarely where it belong while walking us through the tremendous progress made over the past decade and the work that remains to be done.</p>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Why-are-our-cities-dirty---OoruLabs-Talking-Heads-podcast-Episode-31-e291m2b" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
-              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://youtu.be/HHK3fCrkj88" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://open.spotify.com/episode/5julU3Ed6g1qYKbttD6GNX?si=ec629fda82924cee" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000627260228" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
             </div>
           </div>
