--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP33.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 33: Can cities fix the jobs shortage?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 23 Sep 2023 <span class="sep">/</span> 00:00</small></span></div>
             <p class="mb-4">18 million people turn 18 each year in India and we have over a 100 million people surplus in agriculture. Unless we create 20 million new jobs each year, India’s dream of a demographic dividend could easily turn into a nightmare! Listen to Sridha Krishna Senior Scholar at Takshashila Institution as we tackle the role of cities in surmounting this problem. From skills gap to career impact bonds what do we need to do? </p>
@@ -388,17 +388,17 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP32.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 32: Where is the money in our cities going?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 16 Sep 2023 <span class="sep">/</span> 01:06:44</small></span></div>
             <p class="mb-4">Srikanth Vishwanathan unpacks city finances. Why is infrastructure in our cities failing? Are cities mismanaging the finances? Are they unable to tap the right sources of funding? What is the impact of a dysfunctional city finance corporation? What are the reforms in municipal finances?</p>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Where-is-the-money-in-our-cities-going---OoruLabs-Talking-Heads-podcast-Episode-32-e298h3s" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
-              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://youtu.be/fIMKPW59jqM" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://open.spotify.com/episode/5kPJJIKArwz1vcLYaDYUOg?si=8172374519a5499a" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
             </div>
           </div>
