--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP34.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 34: Is india ready for clean transportation?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 30 Sep 2023 <span class="sep">/</span> 00:00</small></span></div>
             <p class="mb-4">Pawan Mulukutla, Director of Integrated Transport, Electric Mobility & Hydrogen, WRI India, talks about the country's readiness to make the transition to clean fuels. While there is a market momentum in electric mobility, there are challenges as well. We explore the industry and product readiness in hydrogen and biofuels as well. </p>
@@ -369,17 +369,17 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP33.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 33: Can cities fix the jobs shortage?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 23 Sep 2023 <span class="sep">/</span> 50:33</small></span></div>
-            <p class="mb-4">18 million people turn 18 each year in India and we have over a 100 million people surplus in agriculture. Unless we create 20 million new jobs each year, India’s dream of a demographic dividend could easily turn into a nightmare! Listen to Sridha Krishna Senior Scholar at Takshashila Institution as we tackle the role of cities in surmounting this problem. From skills gap to career impact bonds what do we need to do? </p>
+            <p class="mb-4">18 million people turn 18 each year in India and we have over a 100 million people surplus in agriculture. Unless we create 20 million new jobs each year, India’s dream of a demographic dividend could easily turn into a nightmare! Listen to Sridhar Krishna Senior Scholar at Takshashila Institution as we tackle the role of cities in surmounting this problem. From skills gap to career impact bonds what do we need to do? </p>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Can-cities-fix-the-jobs-shortage---OoruLabs-Talking-Heads-podcast-Episode-33-e29ksc8" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
-              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://youtu.be/ClbTKxI4BaA" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://open.spotify.com/episode/5iTc1Z6ZPHOCYhxFjviFtT?si=bafccf2334554579" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000628875896" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
             </div>
           </div>
