--- a/index.html
+++ b/index.html
@@ -329,6 +329,26 @@
         </div> -->
 
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP36.png');"></div>
+          <div class="text">
+            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h3 class="font-weight-light"><a href="#">Episode 36: Can apartment complexes create sustainable cities?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 14 Oct 2023 <span class="sep">/</span> 00:00</small></span></div>
+            <p class="mb-4">Bangalore Apartments Federation or BAF is one of a kind collectivisation of more than 1250 apartment owners associations giving themselves bargaining power with city authorities. How have they used their power? Are such dense settlements a boon or bane to the city? Vikram Rai who is the serving secretary of BAF discusses this and more on this episode.
+</p>
+            <h5 class="mb-1">Also on</h5>
+            <div>
+              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+            </div>
+          </div>
+        </div>
+
+         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP35.png');"></div>
           <div class="text">
             <h5><span class="badge bg-warning">Coming Soon</span></h5>
