--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP35.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 35: Does citizen journalism have a future?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 7 Oct 2023 <span class="sep">/</span> 00:00</small></span></div>
             <p class="mb-4">Meera K runs Citizen Matters an online portal that aggregates citizen stories. With her experience in civic activism, open data and trying to get people to contribute to civic affairs, she unravels how we have changed as a society in talking about our urban issues.</p>
@@ -370,17 +370,16 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP34.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 34: Is india ready for clean transportation?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 30 Sep 2023 <span class="sep">/</span> 51:04</small></span></div>
             <p class="mb-4">Pawan Mulukutla, Director of Integrated Transport, Electric Mobility & Hydrogen, WRI India, talks about the country's readiness to make the transition to clean fuels. While there is a market momentum in electric mobility, there are challenges as well. We explore the industry and product readiness in hydrogen and biofuels as well. </p>
             <h5 class="mb-1">Also on</h5>
             <div>
-              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://youtu.be/RT6FSNHQd8E" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://open.spotify.com/episode/5yq4c0IlC9zSJYQrJBbAEE?si=b61ffd5b3d4747d0" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
             </div>
           </div>
