--- a/index.html
+++ b/index.html
@@ -373,6 +373,7 @@
             <h3 class="font-weight-light"><a href="#">Episode 34: Is india ready for clean transportation?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 30 Sep 2023 <span class="sep">/</span> 51:04</small></span></div>
             <p class="mb-4">Pawan Mulukutla, Director of Integrated Transport, Electric Mobility & Hydrogen, WRI India, talks about the country's readiness to make the transition to clean fuels. While there is a market momentum in electric mobility, there are challenges as well. We explore the industry and product readiness in hydrogen and biofuels as well. </p>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Is-India-ready-for-clean-transportation---OoruLabs-Talking-Heads-podcast-Episode-34-e29skuu" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="https://youtu.be/RT6FSNHQd8E" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
