--- a/index.html
+++ b/index.html
@@ -352,8 +352,8 @@
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP35.png');"></div>
           <div class="text">
             <h5><span class="badge bg-success text-white">Up next</span></h5>
-            <h3 class="font-weight-light"><a href="#">Episode 35: Does citizen journalism have a future?</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 7 Oct 2023 <span class="sep">/</span> 00:00</small></span></div>
+            <h3 class="font-weight-light"><a href="#">Episode 35: Does your neighbourhood matter?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 7 Oct 2023 <span class="sep">/</span> 52:01</small></span></div>
             <p class="mb-4">Meera K runs Citizen Matters an online portal that aggregates citizen stories. With her experience in civic activism, open data and trying to get people to contribute to civic affairs, she unravels how we have changed as a society in talking about our urban issues.</p>
             <h5 class="mb-1">Also on</h5>
             <div>
