--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP36.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 36: Can apartment complexes create sustainable cities?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 14 Oct 2023 <span class="sep">/</span> 00:00</small></span></div>
             <p class="mb-4">Bangalore Apartments Federation or BAF is one of a kind collectivisation of more than 1250 apartment owners associations giving themselves bargaining power with city authorities. How have they used their power? Are such dense settlements a boon or bane to the city? Vikram Rai who is the serving secretary of BAF discusses this and more on this episode.</p>
@@ -398,17 +398,17 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP35.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 35: Does your neighbourhood matter?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 7 Oct 2023 <span class="sep">/</span> 52:01</small></span></div>
             <p class="mb-4">Meera K runs Citizen Matters an online portal that aggregates citizen stories. With her experience in civic activism, open data and trying to get people to contribute to civic affairs, she unravels how we have changed as a society in talking about our urban issues.</p>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Does-your-neighbourhood-matter---OoruLabs-Talking-Heads-podcast-Episode-35-e2a7vh4" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
-              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://youtu.be/YHOrc4BzbmU" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://open.spotify.com/episode/6itH1V6qVeM2KhCsZlAjkf?si=187dd6e3a31c4c66" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000630494221" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
             </div>
           </div>
