--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                     <span class="icon-spotify"></span></a>
                   <a href="https://podcasts.apple.com/us/podcast/the-oorulabs-podcast/id1682407685" class="pl-3 pr-3 text-white" style="font-size: 50px;" target="_blank">
                     <span class="icon-podcast"></span></a>
+                  <!--<a href="https://podcastrepublic.net/podcast/1682407685" class="pl-3 pr-3 align-top" style="font-size: 50px;" target="_blank"><img src="images/podcast-republic.png" width="50px" /></a>-->
                 </div>
           </div>
         </div>
@@ -360,9 +361,9 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP37.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 37: Can the Knowledge economy create better cities?</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 21 Oct 2023 <span class="sep">/</span> 00:00</small></span></div>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 21 Oct 2023 <span class="sep">/</span> 59:56</small></span></div>
             <p class="mb-4">Watch as Ashwin Mahesh discusses the state of education from primary to vocational, its impact on cities and the economy. Insights into what is possible and how institutions and government education regulators are struggling to cope with the demands of the marketplace for jobs.</p>
             <h5 class="mb-1">Also on</h5>
             <div>
@@ -379,17 +380,17 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP36.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 36: Can apartment complexes create sustainable cities?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 14 Oct 2023 <span class="sep">/</span> 56:47</small></span></div>
             <p class="mb-4">Bangalore Apartments Federation or BAF is one of a kind collectivisation of more than 1250 apartment owners associations giving themselves bargaining power with city authorities. How have they used their power? Are such dense settlements a boon or bane to the city? Vikram Rai who is the serving secretary of BAF discusses this and more on this episode.</p>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Can-apartment-complexes-create-sustainable-cities---OoruLabs-Talking-Heads-podcast-Episode-36-e2agsf0" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
-              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://youtu.be/Luc7x_XmjzU" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://open.spotify.com/episode/6wGRJ5nISmuCCTj7qV8ZB6?si=b85517ae07f8479f" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000631269130" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
             </div>
           </div>
