--- a/index.html
+++ b/index.html
@@ -340,13 +340,32 @@
         </div> -->
 
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
-          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP38.png');"></div>
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP39.png');"></div>
           <div class="text">
             <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h3 class="font-weight-light"><a href="#">Episode 39: Will our cities plunge into darkness?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 04 Nov 2023 <span class="sep">/</span> 01:08:00</small></span></div>
+            <p class="mb-4">Are we ready for the increase in energy intensity from a growing economy and yet be able to transition to clean energy? Deepak Sriram Krishnan, Associate Director for WRI India's Energy Program, walks us through the challenges in entire power system from producer, distributor to consumer.</h5>
+            <div>
+              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+            </div>
+          </div>
+        </div>
+
+
+         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP38.png');"></div>
+          <div class="text">
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 38: Why is the Government slow?</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 28 Oct 2023 <span class="sep">/</span> 00:00</small></span></div>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 28 Oct 2023 <span class="sep">/</span> 01:15:00</small></span></div>
             <p class="mb-4">Listen to Raj Cherubal, CEO of Chennai Smart City and now with UNDP in the Government of Tamil Nadu, discuss why the government works the way they do, how to to get things done while doing reforms that can give cities more control.</p>
-            <h5 class="mb-1">Also on</h5>
+            <h5 class="mb-1">Click icons below to watch/listen on the channel of your choice</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
@@ -361,17 +380,16 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP37.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 37: Can the Knowledge economy create better cities?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 21 Oct 2023 <span class="sep">/</span> 59:56</small></span></div>
             <p class="mb-4">Watch as Ashwin Mahesh discusses the state of education from primary to vocational, its impact on cities and the economy. Insights into what is possible and how institutions and government education regulators are struggling to cope with the demands of the marketplace for jobs.</p>
-            <h5 class="mb-1">Also on</h5>
+            <h5 class="mb-1">Click icons below to watch/listen on the channel of your choice</h5>
             <div>
-              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://youtu.be/zqSzpk60KBk" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://open.spotify.com/episode/58wF3c7ynExYN3Q6GE4kar?si=0ccbcd7002514900" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000632069518" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
             </div>
           </div>
