--- a/index.html
+++ b/index.html
@@ -340,6 +340,24 @@
         </div> -->
 
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP40.png');"></div>
+          <div class="text">
+            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h3 class="font-weight-light"><a href="#">Episode 40: Will congestion pricing work in India?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 11 Nov 2023 <span class="sep">/</span> 01:03:00</small></span></div>
+            <p class="mb-4">Shreya Gadepalli comes back on the show to clearly explain how congestion pricing or road pricing works, dispel the myths, how parking management and the bus can be an integral part of managing throughput on our roads. We talk bus and the future of road transport corporations as well.</h5>
+            <div>
+              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+            </div>
+          </div>
+        </div>
+
+         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP39.png');"></div>
           <div class="text">
             <h5><span class="badge bg-warning">Coming Soon</span></h5>
@@ -357,13 +375,12 @@
           </div>
         </div>
 
-
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP38.png');"></div>
           <div class="text">
             <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 38: Why is the Government slow?</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 28 Oct 2023 <span class="sep">/</span> 01:15:00</small></span></div>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 28 Oct 2023 <span class="sep">/</span> 01:15:41</small></span></div>
             <p class="mb-4">Listen to Raj Cherubal, CEO of Chennai Smart City and now with UNDP in the Government of Tamil Nadu, discuss why the government works the way they do, how to to get things done while doing reforms that can give cities more control.</p>
             <h5 class="mb-1">Click icons below to watch/listen on the channel of your choice</h5>
             <div>
