--- a/index.html
+++ b/index.html
@@ -342,7 +342,8 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP40.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
+<!--            <h5><span class="badge bg-warning">Coming Soon</span></h5> -->
             <h3 class="font-weight-light"><a href="#">Episode 40: Will congestion pricing work in India?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 11 Nov 2023 <span class="sep">/</span> 01:03:00</small></span></div>
             <p class="mb-4">Shreya Gadepalli comes back on the show to clearly explain how congestion pricing or road pricing works, dispel the myths, how parking management and the bus can be an integral part of managing throughput on our roads. We talk bus and the future of road transport corporations as well.</h5>
@@ -360,16 +361,15 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP39.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 39: Will our cities plunge into darkness?</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 04 Nov 2023 <span class="sep">/</span> 01:08:00</small></span></div>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 04 Nov 2023 <span class="sep">/</span> 01:06:45</small></span></div>
             <p class="mb-4">Are we ready for the increase in energy intensity from a growing economy and yet be able to transition to clean energy? Deepak Sriram Krishnan, Associate Director for WRI India's Energy Program, walks us through the challenges in entire power system from producer, distributor to consumer.</h5>
             <div>
-              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://youtu.be/eBtl6jiO8_E" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://open.spotify.com/episode/4qvwVcACanKiU1RsgD1Tuc?si=2c8bee70509a49ee" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000633646047" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
             </div>
           </div>
