--- a/index.html
+++ b/index.html
@@ -340,12 +340,47 @@
         </div> -->
 
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP42.png');"></div>
+          <div class="text">
+            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h3 class="font-weight-light"><a href="#">Episode 42: Is good governance a pipedream?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 25 Nov 2023 <span class="sep">/</span> 01:07:00</small></span></div>
+            <p class="mb-4">Revathy Ashok, the CEO of Bangalore Political Action Committee (B.PAC) reveals how an India specific PAC can make a difference in civic outcomes. She explains how creating leadership and working with elected representatives is an investment for the long run.</h5>
+            <div>
+              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+            </div>
+          </div>
+        </div>
+
+         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP41.png');"></div>
+          <div class="text">
+            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h3 class="font-weight-light"><a href="#">Episode 41: Are NGO’s effective in enabling sustainable cities?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 18 Nov 2023 <span class="sep">/</span> 01:04:00</small></span></div>
+            <p class="mb-4">Ranjit Gadgil of Parisar, Pune helps us understand the effectiveness and the journey of civic activisim in effecting change in the cities towards environmental sustainability. Being an early mover in this space from Pune the learnings in the space is immense.</h5>
+            <div>
+              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+            </div>
+          </div>
+        </div>
+
+         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP40.png');"></div>
           <div class="text">
             <h5><span class="badge bg-success text-white">Up next</span></h5>
-<!--            <h5><span class="badge bg-warning">Coming Soon</span></h5> -->
             <h3 class="font-weight-light"><a href="#">Episode 40: Will congestion pricing work in India?</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 11 Nov 2023 <span class="sep">/</span> 01:03:00</small></span></div>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 11 Nov 2023 <span class="sep">/</span> 57:54</small></span></div>
             <p class="mb-4">Shreya Gadepalli comes back on the show to clearly explain how congestion pricing or road pricing works, dispel the myths, how parking management and the bus can be an integral part of managing throughput on our roads. We talk bus and the future of road transport corporations as well.</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
