--- a/index.html
+++ b/index.html
@@ -227,11 +227,21 @@
 
           <div class="text-center p-3 p-md-5 bg-white">
             <div class="mb-4">            
+              <img src="images/Guests/revathyashok.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
+            </div>
+            <div class="">
+              <h3 class="font-weight-light h5">Revathy Ashok</h3>
+              <p>The CEO of Bengaluru Political Action Comittee (B.PAC), which runs the B.CLIP program training and supporting leaders for political service.</p>
+            </div>
+          </div>
+
+          <div class="text-center p-3 p-md-5 bg-white">
+            <div class="mb-4">            
               <img src="images/Guests/pawanmulukutla.jpg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
             </div>
             <div class="">
               <h3 class="font-weight-light h5">Pawan Mulukutla</h3>
-              <p>Pawan Mulukutla, Director of Integrated Transport, Electric Mobility & Hydrogen, WRI India, has over two decades of professional experience working at the intersection of urban mobility, energy and environment. </p>
+              <p>Director of Integrated Transport, Electric Mobility & Hydrogen, WRI India, has over two decades of professional experience working at the intersection of urban mobility, energy and environment. </p>
             </div>
           </div>
 
@@ -319,14 +329,13 @@
             <h2 class="font-weight-bold text-black">Podcast Library</h2>
           </div>
         </div>
-
-        <!-- <div class="d-block d-md-flex podcast-entry mb-5" data-aos="fade-up">
+        <!--
+         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/support the pod-1.png');"></div>
-          <div class="text">
-           
-            <h3 class="font-weight-light"><a href="#">Support the OoruLabs podcast</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Advertisement <span class="sep">/</span> 01 January 20xx <span class="sep">/</span> 00:00</small></span></div>
-            <p class="mb-4">If you like the content and would like to support us in keeping it alive you can support this podcast with a donation. If there are sufficient funds, it will help buy equipment and make the production quality better so your viewing experience can get better.</p>
+          <div class="text">   
+            <h3 class="font-weight-light"><a href="#">Year End Special</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Hot Takes <span class="sep">/</span> 30 Dec 2023 <span class="sep">/</span> 00:00</small></span></div>
+            <p class="mb-4">Celebrating 49 Episodes across Talking Heads, Commuter Series and Hot Takes. OoruLabs Mousepads are available to buy. Write to us at oorulabs@gmail.com</p>
             <h5 class="mb-1">This podcast is distributed on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
@@ -337,15 +346,34 @@
                 <span class="icon-podcast"></span></a>
             </div>
           </div>
-        </div> -->
+        </div>
+      -->
+
+         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+          <div class="image" style="background-image: url('images/pod-images/OoruLabs EP43.png');"></div>
+          <div class="text">
+            <h5><span class="badge bg-warning">Coming Soon</span></h5>
+            <h3 class="font-weight-light"><a href="#">Episode 43: Is good governance a pipedream?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 2 Dec 2023 <span class="sep">/</span> 01:07:00</small></span></div>
+            <p class="mb-4">Revathy Ashok, the CEO of Bangalore Political Action Committee (B.PAC) reveals how an India specific PAC can make a difference in civic outcomes. She explains how creating leadership and working with elected representatives is an investment for the long run.</p>
+            <div>
+              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+            </div>
+          </div>
+        </div>
 
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP42.png');"></div>
           <div class="text">
             <h5><span class="badge bg-warning">Coming Soon</span></h5>
-            <h3 class="font-weight-light"><a href="#">Episode 42: Is good governance a pipedream?</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 25 Nov 2023 <span class="sep">/</span> 01:07:00</small></span></div>
-            <p class="mb-4">Revathy Ashok, the CEO of Bangalore Political Action Committee (B.PAC) reveals how an India specific PAC can make a difference in civic outcomes. She explains how creating leadership and working with elected representatives is an investment for the long run.</p>
+            <h3 class="font-weight-light"><a href="#">Episode 42: What is Brand Bengaluru?</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 25 Nov 2023 <span class="sep">/</span> 57:17</small></span></div>
+            <p class="mb-4">The Bengaluru Restructuring Comittee, of which Ravichandar V is a member, has now been rechristined as Brand Bengaluru Comittee. In this episode we talk at length about what this means. He also Unboxes Bengaluru's newest Habba, Unboxing Bengaluru Habba coming up between 1st & 11th of December.</p>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
